k8s-passport-dev-01/ingress-prometheus-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "prometheus.dev01.trinet.internal"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-prometheus
            port:
              number: 9090
  tls:
  - hosts:
    - "prometheus.dev01.trinet.internal"
